2002.03.05 TADA Tadashi <sho@spc.gr.jp>
	* documents moved to doc.
	* HOWTO-use-plugin.html, HOWTO-make-plugin.html: add.
	* remove sample plugins.
	* tdiary.conf.sample, conf.rhtml: remove restriction of using Japanese in @mail_header.
	* skel/mail.rtxt: (Subject) use @date_format instead of '%Y-%m-%d'.
	* * tdiary.rb (TDiaryComment::load): specify a message_id by hour, minute and second to avoid possible message_id confliction. exclude @mail_header from a message_id so as to avoid non-ascii character.

2002.03.04 TADA Tadashi <sho@spc.gr.jp>
	* jtime.rb: add discription.

2002.03.02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: fix comment of @latest_limit.

2002.03.01 TADA Tadashi <sho@spc.gr.jp>
	* i.update.rhtml: adjust comment number when some comments hidden.
	* add 'anchor' plugin. for mod_rewrite.
	* add 'my' plugin.

2002.02.28 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, update.rhtml: adjust comment number when some comments hidden.

2002.02.27 TADA Tadashi <sho@spc.gr.jp>
	* i.diary.rhtml: paragraph/comment anchor fixed in mobile mode.
	* squeeze.rb: add -c option and other changes.

2002.02.26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: fix when wrong file in @data_path.

2002.02.23 TADA Tadashi <sho@spc.gr.jp>
	* mail-via-{qmail,sendmail}.rb: fix typo.
	* recent_list: fix paragraph numbering.

2002.02.22 TADA Tadashi <sho@spc.gr.jp>
	* *.css: valid by W3C. thanks shinchan <stakei@nga.jp>.
	* update.rhtml, i.update.rhtml: change tabsindexs.
	* recent_comment.rb: update by kitaj <kita@kitaj.no-ip.com>.

2002.02.21 TADA Tadashi <sho@spc.gr.jp>
   * recent_comment.rb: fix by zoe.

2002.02.20 TADA Tadashi <sho@spc.gr.jp>
	* update.rhtml, i.update.rhtml: move hide box below submit button.
	* document maintenance.
	* theme: add wiLL.css.
	* misc/plugin: add recent_list.rb, calendar2.rb, recent_comment.rb, comment_rank.rb.
	* title_list.rb: HTML tags have compatibility with recent_list.

2002.02.19 TADA Tadashi <sho@spc.gr.jp>