@@ -2,8 +2,8 @@ From: <%= name %> <<%= mail %>>
 To: <%= @author_mail %>
 Date: <%= date %>
 Message-Id: <%= message_id %>
-Subject: <%= to_mime( "#{@mail_header}:#{@date.strftime( @date_format )}".to_jis ) %>-<%= serial %>
- <%= to_mime( @name.to_jis ) %>
+Subject: <%= to_mime( "#{@mail_header}:#{@date.strftime( @date_format )}".to_jis ).join( "\n " ) %>-<%= serial %>
+ <%= to_mime( @name.to_jis ).join( "\n " ) %>
 MIME-Version: 1.0
 Content-Type: text/plain; charset="iso-2022-jp"
 Content-Transfer-Encoding: 7bit
